# OSCADml

./: .gitignore  CHANGES.md  Makefile  OSCADml.opam  README.md  dune-project  index.html
.github/workflows/: build-and-test.yml  deploy-doc.yml
OSCADml/: arc_points.html  axial_chalice.html  bespoke_sweeps.html  cartesian_gravity_well.html  default_vs_euler_sweeps.html  helices.html  index.html  morphing_sweeps.html  offset_and_rounding.html  polar_rose.html  polyholes.html  profile_skinning.html  resampled_path.html  rounded_polyhole_sweep.html  rounded_prisms.html  rounded_text.html  spline.html  spline_skinning.html  sweep_path.html
OSCADml/OSCADml/: index.html
OSCADml/OSCADml/Color/: index.html
OSCADml/OSCADml/Debug/: index.html
OSCADml/OSCADml/Export/: index.html
OSCADml/OSCADml/Scad/: index.html
OSCADml/OSCADml/Text/: index.html
docs/: dune  index.mld
examples/: arc_points.ml  axial_chalice.ml  bespoke_sweeps.ml  cartesian_gravity_well.ml  default_vs_euler_sweeps.ml  dune  helices.ml  morphing_sweeps.ml  offset_and_rounding.ml  polar_rose.ml  polyholes.ml  profile_skinning.ml  resampled_path.ml  rounded_polyhole_sweep.ml  rounded_prisms.ml  rounded_text.ml  spline.ml  spline_skinning.ml  sweep_path.ml
examples/docs/: arc_points.mld  axial_chalice.mld  bespoke_sweeps.mld  cartesian_gravity_well.mld  default_vs_euler_sweeps.mld  dune  helices.mld  morphing_sweeps.mld  offset_and_rounding.mld  polar_rose.mld  polyholes.mld  profile_skinning.mld  resampled_path.mld  rounded_polyhole_sweep.mld  rounded_prisms.mld  rounded_text.mld  spline.mld  spline_skinning.mld  sweep_path.mld
examples/helpers/: doccer.ml  dune
lib/: OSCADml.ml  OSCADml.mli  color.ml  color.mli  debug.ml  debug.mli  dune  export.ml  export.mli  mesh.ml  mesh.mli  path2.ml  path2.mli  path3.ml  path3.mli  poly2.ml  poly2.mli  poly3.ml  poly3.mli  scad.ml  scad.mli  text.ml  text.mli  text0.ml  util.ml
test/: circle.ml  circle.t  dune  hello.ml  hello.t  linear_extrude_circle.ml  linear_extrude_circle.t  quat_cube.ml  quat_cube.t  quat_slerp.ml  quat_slerp.t  ragged_tri_array_mesh.ml  ragged_tri_array_mesh.t  rendered_sphere.ml  rendered_sphere.t  rotate_extrude_triangle.ml  rotate_extrude_triangle.t  square.ml  square.t  triangle_polygon.ml  triangle_polygon.t  vertical_text.ml  vertical_text.t
test/e2e/dxf/: dune
test/e2e/stl/: dune
